--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="flex-grow flex flex-col md:flex-row">
         <!-- Sidebar -->
         <div class="bg-background p-8 fixed h-screen w-64 border-r border-border hidden md:flex flex-col items-center">
-            <img src="public/Salvium_assets/wordmark_logo/white/salvium_wordmark_white.svg" alt="Salvium Logo" class="w-32 md:w-40" />
+            <img src="public/Salvium-logo_REV.png" alt="Salvium Logo" class="w-32 md:w-40" />
             <div class="mt-8 space-y-4">
                 <p id="lastUpdate" class="text-gray-400 text-sm"></p>
             </div>
@@ -35,7 +35,7 @@
 
         <!-- Mobile Header -->
         <div class="md:hidden bg-background p-4 border-b border-border flex items-center justify-between">
-            <img src="public/Salvium_assets/wordmark_logo/white/salvium_wordmark_white.svg" alt="Salvium Logo" class="h-8" />
+            <img src="public/Salvium-logo_REV.png" alt="Salvium Logo" class="h-8" />
             <p id="mobileLastUpdate" class="text-gray-400 text-xs"></p>
         </div>
 
@@ -51,42 +51,42 @@
                 <!-- Stats Grid -->
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
                     <div class="bg-background p-6 rounded-lg border border-border hover:scale-[1.02] transition-transform duration-300 relative group">
-                        <img src="public/Salvium_assets/coin_icon/white/salvium_coin_white.svg" alt="" class="absolute top-4 right-4 w-10 h-10 opacity-60 group-hover:opacity-100 transition-opacity" />
+                        <img src="public/Salvium_ICON-WHT.png" alt="" class="absolute top-4 right-4 w-10 h-10 opacity-60 group-hover:opacity-100 transition-opacity" />
                         <p class="text-gray-400 mb-2">Block Height</p>
                         <h2 id="blockHeight" class="text-2xl font-bold text-primary">-</h2>
                     </div>
                     <div class="bg-background p-6 rounded-lg border border-border hover:scale-[1.02] transition-transform duration-300 relative group">
-                        <img src="public/Salvium_assets/coin_icon/white/salvium_coin_white.svg" alt="" class="absolute top-4 right-4 w-10 h-10 opacity-60 group-hover:opacity-100 transition-opacity" />
+                        <img src="public/Salvium_ICON-WHT.png" alt="" class="absolute top-4 right-4 w-10 h-10 opacity-60 group-hover:opacity-100 transition-opacity" />
                         <p class="text-gray-400 mb-2">Network Hashrate</p>
                         <h2 id="hashrate" class="text-2xl font-bold text-primary">-</h2>
                     </div>
                     <div class="bg-background p-6 rounded-lg border border-border hover:scale-[1.02] transition-transform duration-300 relative group">
-                        <img src="public/Salvium_assets/coin_icon/white/salvium_coin_white.svg" alt="" class="absolute top-4 right-4 w-10 h-10 opacity-60 group-hover:opacity-100 transition-opacity" />
+                        <img src="public/Salvium_ICON-WHT.png" alt="" class="absolute top-4 right-4 w-10 h-10 opacity-60 group-hover:opacity-100 transition-opacity" />
                         <p class="text-gray-400 mb-2">Difficulty</p>
                         <h2 id="difficulty" class="text-2xl font-bold text-primary">-</h2>
                     </div>
                     <div class="bg-background p-6 rounded-lg border border-border hover:scale-[1.02] transition-transform duration-300 relative group">
-                        <img src="public/Salvium_assets/coin_icon/white/salvium_coin_white.svg" alt="" class="absolute top-4 right-4 w-10 h-10 opacity-60 group-hover:opacity-100 transition-opacity" />
+                        <img src="public/Salvium_ICON-WHT.png" alt="" class="absolute top-4 right-4 w-10 h-10 opacity-60 group-hover:opacity-100 transition-opacity" />
                         <p class="text-gray-400 mb-2">Total Supply</p>
                         <h2 id="totalSupply" class="text-2xl font-bold text-primary">-</h2>
                     </div>
                     <div class="bg-background p-6 rounded-lg border border-border hover:scale-[1.02] transition-transform duration-300 relative group">
-                        <img src="public/Salvium_assets/coin_icon/white/salvium_coin_white.svg" alt="" class="absolute top-4 right-4 w-10 h-10 opacity-60 group-hover:opacity-100 transition-opacity" />
+                        <img src="public/Salvium_ICON-WHT.png" alt="" class="absolute top-4 right-4 w-10 h-10 opacity-60 group-hover:opacity-100 transition-opacity" />
                         <p class="text-gray-400 mb-2">Block Reward</p>
                         <h2 id="blockReward" class="text-2xl font-bold text-primary">-</h2>
                     </div>
                     <div class="bg-background p-6 rounded-lg border border-border hover:scale-[1.02] transition-transform duration-300 relative group">
-                        <img src="public/Salvium_assets/coin_icon/white/salvium_coin_white.svg" alt="" class="absolute top-4 right-4 w-10 h-10 opacity-60 group-hover:opacity-100 transition-opacity" />
+                        <img src="public/Salvium_ICON-WHT.png" alt="" class="absolute top-4 right-4 w-10 h-10 opacity-60 group-hover:opacity-100 transition-opacity" />
                         <p class="text-gray-400 mb-2">Last Block</p>
                         <h2 id="lastBlock" class="text-2xl font-bold text-primary">-</h2>
                     </div>
                     <div class="bg-background p-6 rounded-lg border border-border hover:scale-[1.02] transition-transform duration-300 relative group">
-                        <img src="public/Salvium_assets/coin_icon/white/salvium_coin_white.svg" alt="" class="absolute top-4 right-4 w-10 h-10 opacity-60 group-hover:opacity-100 transition-opacity" />
+                        <img src="public/Salvium_ICON-WHT.png" alt="" class="absolute top-4 right-4 w-10 h-10 opacity-60 group-hover:opacity-100 transition-opacity" />
                         <p class="text-gray-400 mb-2">Network Type</p>
                         <h2 id="networkType" class="text-2xl font-bold text-primary">-</h2>
                     </div>
                     <div class="bg-background p-6 rounded-lg border border-border hover:scale-[1.02] transition-transform duration-300 relative group">
-                        <img src="public/Salvium_assets/coin_icon/white/salvium_coin_white.svg" alt="" class="absolute top-4 right-4 w-10 h-10 opacity-60 group-hover:opacity-100 transition-opacity" />
+                        <img src="public/Salvium_ICON-WHT.png" alt="" class="absolute top-4 right-4 w-10 h-10 opacity-60 group-hover:opacity-100 transition-opacity" />
                         <p class="text-gray-400 mb-2">Emission Rate (Daily)</p>
                         <h2 id="emissionRate" class="text-2xl font-bold text-primary">-</h2>
                     </div>
